2003-12-18  Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c: Incoporate John Morton's explanations about what
	all those arguments mean. Now everything that takes a logical
	stream index says so.

	* pyvorbisinfo.c: Provide str() methods for VorbisComment and
	VorbisInfo objects. Now they print out all pretty and stuff. Now
	VorbisFile could still use one.
	
2003-09-08  Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisfile.c, pyvorbisinfo.c: Fix an exception leak (the
	exceptions would show up later, even though things worked OK)
	
2003-9-01   Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisfile.c (py_ov_file_dealloc) Fix a file descriptor leak.
	
2003-5-31   Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c (py_comment_subscript) Applied patch from Brian
	Warner to fix a bug where I wasn't clearing the Python error
	correctly in unicode conversion.

	* pyvorbisinfo.c (write_comments) Applied patch from Csaba Henk to
	fix comment modification in Windows.
	
2003-5-13   Andrew H. Chatham <pyogg@andrewchatham.com>
	* pyvorbisinfo.c (py_info_new): Applied patch from 
	Andrew Mahone to allow negative quality values
	* pyvorbisfile.c (is_big_endian): Use runtime endian test rather
	than try to figure out where everyone keeps endian.h
	* pyvorbiscodec.c (py_dsp_write_wav): Applied patch from Andrew
	Mahone to fix a truncation bug with weird wav files.
	
2003-2-07   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied another patch from Nicodemus to fix things windows. Pass
	the "b" flag to all file open commands.
	
2003-1-18   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied a patch from Nicodemus <nicodemus@globalite.com.br> to 
	get this to build on windows.
	
2002-09-24  Andrew H. Chatham <pyogg@andrewchatham.com>
	* Changes from Neil Blakey-Milner
	* setup.py - fixed regular expression
	* pyvorbisfile.c: Used more portable endian-test code.
	
2002-09-12  Andrew H. Chatham <pyogg@andrewchatham.com>